--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
                 <h1>Choose Your Opponent</h1>
                 <div class="opponents">
                     <div class="opponents-wrapper">
-                        <div id="human">
+                        <div class="human">
                             <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
                             <div>Another mortal</div>
                         </div>
-                        <div id="bingus">
+                        <div class="bingus">
                             <img src="../images/bingus-gamer.jpg" alt="bingus with headphones" width="200px">
                             <div>Bingus (easy)</div>
                         </div>
-                        <div id="floppa">
+                        <div class="floppa">
                             <img src="../images/god-gamer-floppa-2.jpg" alt="floppa with headphones" width="200px">
                             <div>Big Floppa (impossible)</div>
                         </div>
@@ -37,19 +37,19 @@
                     <div>Player 1</div>
                 </div>
                 <div class="board-wrapper">
-                    <div id="0">x</div>
+                    <div id="0" class="field"></div>
                     <div class="board line1"></div>
-                    <div id="1">x</div>
+                    <div id="1" class="field"></div>
                     <div class="board line2"></div>
-                    <div id="2"></div>
+                    <div id="2" class="field"></div>
                     <div class="board line3"></div>
-                    <div id="3">x</div>
-                    <div id="4"></div>
-                    <div id="5"></div>
+                    <div id="3" class="field"></div>
+                    <div id="4" class="field"></div>
+                    <div id="5" class="field"></div>
                     <div class="board line4"></div>
-                    <div id="6">O</div>
-                    <div id="7"></div>
-                    <div id="8"></div>
+                    <div id="6" class="field"></div>
+                    <div id="7" class="field"></div>
+                    <div id="8" class="field"></div>
                 </div>
                 <div class="player2-wraper">
                     <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
