Add scores to html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             </div>
             <div class="state-2-wrapper">
                 <div class="player1-wraper">
-                    <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
                     <div>Player 1</div>
+                    <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
+                    <div class="player1 scoreboard">Score: 0</div>
                 </div>
                 <div class="board-wrapper">
                     <div id="0" class="field"></div>
@@ -52,8 +53,9 @@
                     <div id="8" class="field"></div>
                 </div>
                 <div class="player2-wraper">
-                    <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
                     <div>Player 2</div>
+                    <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
+                    <div class="player2 scoreboard">Score: 0</div>
                 </div>
             </div>
         </div>
