Add next round button and win color matching

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                 </div>
             </div>
         </div>
+        <div class="result-wrapper">
+            Next Round
+        </div>
     </div>
 </body>
 </html>
