Add start menu components

--- a/index.html
+++ b/index.html
@@ -13,7 +13,27 @@
         <div class="header">Tic Tac Toe</div>
         <div class="content">
             <div class="state-1-wrapper">
-                <h1>Choose Your Opponent</h1>
+                <div>
+                    <h1>Choose X</h1>
+                    <div class="opponents">
+                        <div class="opponents-wrapper">
+                            <div class="human">
+                                <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
+                                <div>Another mortal</div>
+                            </div>
+                            <div class="bingus">
+                                <img src="../images/bingus-gamer.jpg" alt="bingus with headphones" width="200px">
+                                <div>Bingus (easy)</div>
+                            </div>
+                            <div class="floppa">
+                                <img src="../images/god-gamer-floppa-2.jpg" alt="floppa with headphones" width="200px">
+                                <div>Big Floppa (impossible)</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <h1>Choose O</h1>
                 <div class="opponents">
                     <div class="opponents-wrapper">
                         <div class="human">
@@ -29,6 +49,8 @@
                             <div>Big Floppa (impossible)</div>
                         </div>
                     </div>
+                </div>
+                <button>START</button>
                 </div>
             </div>
             <div class="state-2-wrapper">
