Add start menu functionality and AI first turn

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                     <h1>Choose X</h1>
                     <div class="opponents">
                         <div class="opponents-wrapper">
-                            <div class="human">
+                            <div class="human X" ai="0">
                                 <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
                                 <div>Another mortal</div>
                             </div>
-                            <div class="bingus">
+                            <div class="bingus X" ai="1">
                                 <img src="../images/bingus-gamer.jpg" alt="bingus with headphones" width="200px">
                                 <div>Bingus (easy)</div>
                             </div>
-                            <div class="floppa">
+                            <div class="floppa X" ai="2">
                                 <img src="../images/god-gamer-floppa-2.jpg" alt="floppa with headphones" width="200px">
                                 <div>Big Floppa (impossible)</div>
                             </div>
@@ -34,22 +34,22 @@
                 </div>
                 <div>
                     <h1>Choose O</h1>
-                <div class="opponents">
-                    <div class="opponents-wrapper">
-                        <div class="human">
-                            <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
-                            <div>Another mortal</div>
-                        </div>
-                        <div class="bingus">
-                            <img src="../images/bingus-gamer.jpg" alt="bingus with headphones" width="200px">
-                            <div>Bingus (easy)</div>
-                        </div>
-                        <div class="floppa">
-                            <img src="../images/god-gamer-floppa-2.jpg" alt="floppa with headphones" width="200px">
-                            <div>Big Floppa (impossible)</div>
+                    <div class="opponents">
+                        <div class="opponents-wrapper">
+                            <div class="human O" ai="0">
+                                <img src="../images/sweaty-gamer.jpg" alt="sweaty gamer" width="200px">
+                                <div>Another mortal</div>
+                            </div>
+                            <div class="bingus O" ai="1">
+                                <img src="../images/bingus-gamer.jpg" alt="bingus with headphones" width="200px">
+                                <div>Bingus (easy)</div>
+                            </div>
+                            <div class="floppa O" ai="2">
+                                <img src="../images/god-gamer-floppa-2.jpg" alt="floppa with headphones" width="200px">
+                                <div>Big Floppa (impossible)</div>
+                            </div>
                         </div>
                     </div>
-                </div>
                 <button>START</button>
                 </div>
             </div>
